# goober-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  Shuttle.toml  TERMS.md  build.rs  diesel.toml  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  ci.yml  rust.yml
commit-history/: Cargo.toml
commit-history/src/: lib.rs
crates/activity/: Cargo.toml
crates/activity/src/: lib.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/command_anon/: Cargo.toml
crates/command_anon/src/: lib.rs
crates/command_debug/: Cargo.toml
crates/command_debug/src/: lib.rs
crates/command_rock_paper_scissors/: Cargo.toml
crates/command_silly/: Cargo.toml
crates/command_silly/src/: lib.rs
crates/command_strike/: Cargo.toml
crates/command_strike/src/: lib.rs
crates/command_timestamp/: Cargo.toml
crates/command_timestamp/src/: lib.rs
crates/command_updates/: Cargo.toml
crates/command_updates/src/: lib.rs
crates/command_updates_proc_macro/: Cargo.toml
crates/command_updates_proc_macro/src/: lib.rs
crates/command_vote/: Cargo.toml
crates/command_vote/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: debug.rs  lib.rs  rock_paper_scissors.rs  silly.rs  updates.rs  vote.rs
crates/commands_shared/: Cargo.toml
crates/commands_shared/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/early_access/: Cargo.toml
crates/early_access/src/: lib.rs
crates/emoji/: Cargo.toml  build.rs
crates/emoji/src/: emojis.toml  lib.rs
crates/goober_bot/: Cargo.toml
crates/goober_bot/src/: main.rs
crates/monetary/: Cargo.toml
crates/monetary/src/: lib.rs
crates/monetization/: Cargo.toml
crates/monetization/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/silly/: Cargo.toml  build.rs
crates/silly/src/: lib.rs  sillies.toml
migrations/: 20240614000018_guild_configs.sql  20240614004559_configs.sql  20240614012136_non_null_strikes_enabled.sql
migrations/2025-02-26-225033_create_configs_strikes_and_analytics/: down.sql  up.sql
migrations/2025-02-27-180326_change_strikes_id_to_integer/: down.sql  up.sql
shuttle-persist-msgpack/: .gitignore  Cargo.toml
shuttle-persist-msgpack/src/: lib.rs
src/: activity.rs  analytics.rs  boredom.rs  collective.rs  commands.rs  confess.rs  config.rs  database.rs  debug.rs  diesel_migration.rs  emoji.rs  error.rs  main.rs  models.rs  monetary.rs  persist.rs  portside.rs  rp_commands.rs  rps.rs  schema.rs  sponsors.rs  strike.rs  utility.rs
src/commands/: anon.rs  config.rs  debug.rs  fun.rs  rock_paper_scissors.rs  silly.rs  sponsors.rs  strike.rs  timestamp.rs  updates.rs  vote.rs
