[package]
name = "goober-bot"
version = "2.0.0"
edition.workspace = true

[dependencies]
poise.workspace = true
poise_error.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

early_access.workspace = true
silly.workspace = true

[build-dependencies]
dotenvy.workspace = true

[patch.crates-io]
# Use latest commit from serenity-next branch once checks are passing so that components v2 can be used
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "518ff0564865bca2abf01ae8995b77340f439ef9" }

[workspace.package]
edition = "2024"

[workspace.dependencies]
early_access.path = "crates/early_access"
emoji.path = "crates/emoji"
silly.path = "crates/silly"

dotenvy = "0.15.7"
poise = "0.6.1"
poise_error = "1.6.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.9.2", default-features = false, features = ["parse", "serde", "std"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
