[package]
name = "goober_bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
activity.workspace = true
analytics.workspace = true
commands.workspace = true
config.workspace = true
monetary.workspace = true
poise.workspace = true
poise_error.workspace = true
shared.workspace = true
shuttle-runtime.workspace = true
shuttle-serenity.workspace = true
shuttle-shared-db.workspace = true
topgg.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# Ensures that poise_error uses the same version of poise
[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "80a3a9c3ca1629725f0fa4ec98372d39cf36f6b6" }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
# If making a new crate, make sure to add it to the env filter in `src/main.rs`.
activity = { path = "crates/activity" }
analytics = { path = "crates/analytics" }
command_anon = { path = "crates/command_anon" }
command_debug = { path = "crates/command_debug" }
command_rock_paper_scissors = { path = "crates/command_rock_paper_scissors" }
command_silly = { path = "crates/command_silly" }
command_strike = { path = "crates/command_strike" }
command_timestamp = { path = "crates/command_timestamp" }
command_updates = { path = "crates/command_updates" }
command_updates_proc_macro = { path = "crates/command_updates_proc_macro" }
command_vote = { path = "crates/command_vote" }
commands = { path = "crates/commands" }
commands_shared = { path = "crates/commands_shared" }
config = { path = "crates/config" }
database = { path = "crates/database" }
emoji = { path = "crates/emoji" }
monetary = { path = "crates/monetary" }
shared = { path = "crates/shared" }

charts-rs = { version = "0.3.24", features = ["image-encoder"] }
chrono = "0.4.41"
git2 = "0.20.2"
opendal = { version = "0.51.2", default-features = false }
paste = "1.0.15"
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "80a3a9c3ca1629725f0fa4ec98372d39cf36f6b6" }
poise_error = "1.4.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shuttle-runtime = { version = "0.53.0", default-features = false }
shuttle-serenity = "0.53.0"
shuttle-shared-db = { version = "0.53.0", features = ["opendal-postgres"] }
tokio = "1.47.1"
topgg = { version = "1.4.2", features = ["autoposter", "serenity-cached"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
