[package]
name = "shuttle-persist-msgpack"
version = "0.49.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin for persist objects"
repository = "https://github.com/valentinegb/goober-bot"
keywords = ["shuttle-service", "persistence"]

[dependencies]
async-trait = "0.1.83"
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
shuttle-service = "0.49.0"
thiserror = "2.0.9"
