[package]
name = "command_debug"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
commands_shared.workspace = true
config.workspace = true
emoji.workspace = true
poise.workspace = true
poise_error.workspace = true
shared.workspace = true
