[package]
name = "command_strike"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
commands_shared.workspace = true
config.workspace = true
database.workspace = true
emoji.workspace = true
poise.workspace = true
poise_error.workspace = true
serde.workspace = true
shared.workspace = true
