[package]
name = "commands"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
command_anon.workspace = true
command_debug.workspace = true
command_rock_paper_scissors.workspace = true
command_silly.workspace = true
command_strike.workspace = true
command_timestamp.workspace = true
command_updates.workspace = true
command_vote.workspace = true
commands_shared.workspace = true
