[package]
name = "goober_bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
activity.workspace = true
analytics.workspace = true
commands.workspace = true
config.workspace = true
monetary.workspace = true
poise.workspace = true
poise_error.workspace = true
shared.workspace = true
shuttle-runtime.workspace = true
shuttle-serenity.workspace = true
shuttle-shared-db.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
